# geom7001_gold_coast_turbidity

./: 1 download_data.ipynb  2 create_csv.ipynb  3 error_measurement.ipynb  README.md  area_of_interest_cluster1.geojson  area_of_interest_cluster2.geojson  pyproject.toml  sentinel_water_quality_sensor.csv
