[project]
name = "geom7001_gold_coast_turbidity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cubo>=2024.8.0",
    "dask[complete]>=2025.9.0",
    "distributed>=2025.9.0",
    "folium>=0.20.0",
    "gdal==3.11.4",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "ipyleaflet>=0.20.0",
    "jinja2>=3.1.6",
    "numpy>=1.26.4",
    "odc-stac>=0.4.0",
    "openpyxl>=3.1.5",
    "pystac>=1.14.0",
    "rasterio>=1.4.3",
    "rioxarray>=0.19.0",
    "s2cloudless>=1.7.3",
    "scikit-learn>=1.7.2",
    "spyndex>=0.7.1",
    "stackstac>=0.5.1",
]
